adds some sorting methods and fixes some models. Missing tests.

--- a/Team1P2.Repo/Team1P2.Repo.csproj
+++ b/Team1P2.Repo/Team1P2.Repo.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>e04e0f91-9024-4a77-986a-faae98b21ac7</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,10 +16,15 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Team1P2.Models\Team1P2.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
