--- a/Team1P2/Properties/launchSettings.json
+++ b/Team1P2/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     },
     "Team1P2": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/user/find",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
