--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,13 @@ steps:
     package: '$(Build.ArtifactStagingDirectory)/**/*.zip'
     deploymentMethod: 'auto'
 
-
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    azureSubscription: 'Azure subscription 1(18d07810-bd20-491d-95cd-4ea8dbdbe96b)'
+    appType: 'apiApp'
+    WebAppName: 'blurbsapi'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
 
 # - task: AzureRmWebAppDeployment@4
 #   inputs:
