--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,9 +44,20 @@ steps:
   inputs:
     ConnectionType: 'AzureRM'
     azureSubscription: 'Azure subscription 1(18d07810-bd20-491d-95cd-4ea8dbdbe96b)'
-    appType: 'apiApp'
+    appType: 'webApp'
     WebAppName: 'blurbsapi'
     packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+
+# - task: AzureWebApp@1
+#   inputs:
+#     azureSubscription: 'Azure subscription 1(18d07810-bd20-491d-95cd-4ea8dbdbe96b)'
+#     appType: 'webApp'
+#     appName: 'blurbsapi'
+#     deployToSlotOrASE: true
+#     resourceGroupName: 'BlurbsP2'
+#     slotName: 'production'
+#     package: '$(System.DefaultWorkingDirectory)/**/*.zip'
+#     deploymentMethod: 'auto'
 
 # - task: AzureRmWebAppDeployment@4
 #   inputs:
