--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,6 @@ steps:
       command: "publish"
       publishWebProjects: true
       arguments: "--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)"
-      zipAfterPublish: true
 
   - task: AzureRmWebAppDeployment@4
     inputs:
@@ -46,7 +45,7 @@ steps:
       azureSubscription: "Azure subscription 1(18d07810-bd20-491d-95cd-4ea8dbdbe96b)"
       appType: "webApp"
       WebAppName: "blurbsapi"
-      packageForLinux: "$(Build.ArtifactStagingDirectory)/**/*.zip"
+      packageForLinux: "$(Build.ArtifactStagingDirectory)"
 # - task: AzureWebApp@1
 #   inputs:
 #     azureSubscription: 'Azure subscription 1(18d07810-bd20-491d-95cd-4ea8dbdbe96b)'
