--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,10 +23,9 @@ steps:
 
   - task: VSBuild@1
     inputs:
-      solution: "$(solution)"
-      msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
-      platform: "$(buildPlatform)"
-      configuration: "$(buildConfiguration)"
+      solution: '$(solution)'
+      platform: '$(buildPlatform)'
+      configuration: '$(buildConfiguration)'
 
   - task: VSTest@2
     inputs:
@@ -35,9 +34,11 @@ steps:
 
   - task: DotNetCoreCLI@2
     inputs:
-      command: "publish"
+      command: 'publish'
       publishWebProjects: true
-      arguments: "--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)"
+      arguments: '--configuration $(buildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+      zipAfterPublish: false
+      modifyOutputPath: false
 
   - task: AzureRmWebAppDeployment@4
     inputs:
