--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,12 +24,11 @@ steps:
   - task: SonarCloudPrepare@1
     inputs:
       SonarCloud: 'blurbsApi'
-      organization: 'atwalk14'
+      organization: 'revatureteam1'
       scannerMode: 'MSBuild'
       projectKey: 'RevatureTeam1_P2Blurbs'
       projectName: 'P2Blurbs'
-      extraProperties: |
-        sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
+      extraProperties: 'sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"'
 
   - task: VSBuild@1
     inputs:
