--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
   system_accesstoken: $(System.AccessToken)
 
 steps:
-  - scripts: |
+  - script: |
       git config --global --add url."git@github.com:".insteadOf "https://github.com/"
   - checkout: self
     persistCredentials: true    
